--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.12",
     "@types/react": "^17.0.5",
@@ -18,10 +19,15 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
+    "draft-to-html": "0.0.1",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -57,6 +63,8 @@
     ]
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.0",
+    "@types/react-draft-wysiwyg": "^1.13.2",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
