--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
+    "@types/rellax": "^1.7.3",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
@@ -34,6 +35,7 @@
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
     "redux-toolkit": "^1.1.2",
+    "rellax": "^1.12.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
