--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux-logger": "^3.0.6",
     "redux-toolkit": "^1.1.2",
     "rellax": "^1.12.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
@@ -67,6 +69,7 @@
   "devDependencies": {
     "@types/draftjs-to-html": "^0.8.0",
     "@types/react-draft-wysiwyg": "^1.13.2",
+    "@types/react-slick": "^0.23.4",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
