--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
+    "react-rellax": "^1.0.3",
+    "react-rellax-wrapper": "^1.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
