--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
     "@types/rellax": "^1.7.3",
+    "@types/socket.io": "^3.0.2",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
@@ -30,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.2.0",
+    "react-mentions": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-rellax": "^1.0.3",
     "react-rellax-wrapper": "^1.0.6",
@@ -40,6 +42,8 @@
     "redux-toolkit": "^1.1.2",
     "rellax": "^1.12.1",
     "slick-carousel": "^1.8.1",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
@@ -75,6 +79,7 @@
     "@iconify/react": "^1.1.4",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/react-draft-wysiwyg": "^1.13.2",
+    "@types/react-mentions": "^4.1.0",
     "@types/react-slick": "^0.23.4",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
