--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-slick": "^0.28.1",
     "redux-logger": "^3.0.6",
     "redux-toolkit": "^1.1.2",
+    "regexify-string": "^1.0.16",
     "rellax": "^1.12.1",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.1.2",
