--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.9",
     "autosize": "^4.0.4",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.5",
     "draft-js": "^0.11.7",
     "draft-to-html": "0.0.1",
     "draftjs-to-html": "^0.9.1",
