--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.12",
+    "@types/peerjs": "^1.1.0",
     "@types/react": "^17.0.5",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-datepicker": "^3.1.8",
@@ -28,6 +29,7 @@
     "draft-to-html": "0.0.1",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
+    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-custom-scrollbars": "^4.2.1",
