--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.12",
-    "@types/peerjs": "^1.1.0",
     "@types/react": "^17.0.5",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-datepicker": "^3.1.8",
@@ -20,6 +19,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
     "@types/rellax": "^1.7.3",
+    "@types/simple-peer": "^9.6.3",
     "@types/socket.io": "^3.0.2",
     "@types/styled-components": "^5.1.9",
     "autosize": "^4.0.4",
@@ -29,7 +29,6 @@
     "draft-to-html": "0.0.1",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
-    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-custom-scrollbars": "^4.2.1",
@@ -48,6 +47,7 @@
     "redux-toolkit": "^1.1.2",
     "regexify-string": "^1.0.16",
     "rellax": "^1.12.1",
+    "simple-peer": "^9.11.0",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
